feat: all swagger created
